@@ -28,7 +28,7 @@
 		</div> <!-- end of gl_menu -->
 
         <div id="gl_wrapper">
-            <div id="{centercolumn}">
+            <div id="{centercolumn}" class="sameheight">
                 <div class="welcomeanddate-text">
                     <span class="gl_user-menu-right">
 <?php global $_USER; if (isset($_USER['uid']) && $_USER['uid'] > 1) { ?>
