@@ -1,5 +1,5 @@
 <!-- Start of Right Blocks -->
-    <div id="gl_extra" class="gl_blockstyle1"> <!-- gl_blockstyle1 - default title w/shading | gl_blockstyle2 - title w/out shading | gl_blockstyle3 - no title or shading | See style.css for more info -->
+    <div id="gl_extra" class="gl_blockstyle1 sameheight"> <!-- gl_blockstyle1 - default title w/shading | gl_blockstyle2 - title w/out shading | gl_blockstyle3 - no title or shading | See style.css for more info -->
         <div class="block-columnpad">{glfusion_rblocks}</div>
     </div>
 <!-- End of Right Blocks -->
